# LibraryProject

./: .dockerignore  .flake8  Dockerfile  docker-compose.yml  library_project.dump  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
