[project]
name = "libraryproject"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxZ",email = "maxzonoff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "django-redis (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
